--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">lichtblick</string>
-    <string name="main_activity_title">lichtblick</string>
+    <string name="app_name">Autoblick</string>
+    <string name="main_activity_title">Autoblick</string>
 </resources>
